Fix Sidebar Spacing + Callout Table + Checkboxes

--- a/SCSS/Theme Rewrite/base/_file-explorer.scss
+++ b/SCSS/Theme Rewrite/base/_file-explorer.scss
@@ -69,6 +69,10 @@ body {
 .nav-file-title { color: var(--file-text-color); }
 
 
+.nav-file-tag {
+    margin-left: auto;
+}
+
 
 //Hover
 // .nav-file-title:hover .nav-file-title-content,
