--- a/SCSS/Theme Rewrite/base/_headers.scss
+++ b/SCSS/Theme Rewrite/base/_headers.scss
@@ -130,6 +130,8 @@ body {
     --h5-padding: var(--header-padding);
     --h6-padding: var(--header-padding);
 
+    --heading-spacing: 10px;
+
     //Header Background Color
     --header-background: transparent;
     --h1-background: var(--header-background);
