--- a/SCSS/Theme Rewrite/base/_sidebar.scss
+++ b/SCSS/Theme Rewrite/base/_sidebar.scss
@@ -140,7 +140,7 @@
     margin-left: -3px;
 }
 //Fix Spacing
-.tree-item-self { gap: 4px; }
+// .tree-item-self { gap: 4px; }
 
 // .tree-item-self.is-clickable {
 //     margin-left: 0 !important;
