--- a/SCSS/Theme Rewrite/custom-css/callouts/_callout-type-table.scss
+++ b/SCSS/Theme Rewrite/custom-css/callouts/_callout-type-table.scss
@@ -21,5 +21,10 @@
         white-space: nowrap; 
         margin: 0; 
         margin: auto;
+        overflow-x: scroll;
+        
+        & th,
+        & td
+        { white-space: nowrap; }
     }
 }
