--- a/SCSS/Theme Rewrite/plugins-core/_bookmarks.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_bookmarks.scss
@@ -6,6 +6,7 @@
     &.tree-item-self.mod-collapsible {
         --nav-item-weight: 900;
     }
+    &.tree-item-self { gap: 4px; }
 }
 .workspace-leaf-content[data-type=bookmarks] .view-content {
     padding: 0 var(--size-4-2);
