--- a/SCSS/Theme Rewrite/plugins-core/_outline-pane.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_outline-pane.scss
@@ -4,7 +4,7 @@ body {
 
     --outline-arrow-visibility: hidden;
     --outline-arrow-display: none;
-    --outline-arrow-margin: -20px;
+    --outline-arrow-margin: -16px;
 }
 
 //Outline Icon
